# activemq-apollo

./: .gitignore  LICENSE  NOTICE  pom.xml  readme.md  svn-commit.tmp
activemq-all/: .classpath  .project  pom.xml
activemq-all/src/test/resources/: activemq.xml
activemq-amqp-generator/specification/1.0-PR2/: amqp.dtd  index.xml  messaging.xml  security.xml
activemq-bio/: pom.xml
activemq-broker/: pom.xml
activemq-broker/src/main/resources/: non-persistent-activemq.xml  persistent-activemq.xml
activemq-broker/src/test/resources/: log4j.properties
activemq-cassandra/: pom.xml
activemq-cassandra/src/main/proto/: data.proto
activemq-client/: .project  pom.xml
activemq-dispatcher/: pom.xml
activemq-dto/: pom.xml
activemq-flow/: pom.xml
activemq-hawtdb/: pom.xml
activemq-hawtdb/src/main/proto/: data.proto  hawtdb-data.proto  kahadb-data.proto
activemq-jaxb/: pom.xml
activemq-kaha/: pom.xml
activemq-kaha/src/main/proto/: kahadb-data.proto
activemq-network/: .project  pom.xml
activemq-openwire/: pom.xml
activemq-protobuf/: NOTICE  pom.xml
activemq-protobuf/activemq-protobuf/: pom.xml
activemq-protobuf/activemq-protobuf-test/: pom.xml
activemq-protocol/: pom.xml
activemq-queue/: pom.xml
activemq-queue/src/test/proto/: test.proto
activemq-scala/: pom.xml
activemq-selector/: pom.xml
activemq-selector/src/main/grammar/: SelectorParser.jj
activemq-selector/src/main/javacc/: SelectorParser.jj
activemq-spring/: pom.xml
activemq-stomp/: pom.xml
activemq-stomp/src/main/resources/: log4j.properties
activemq-stomp/src/test/ide-resources/: log4j.properties
activemq-store/: pom.xml
activemq-syscall/: pom.xml
activemq-syscall/activemq-syscall/: pom.xml
activemq-syscall/activemq-syscall-all/: pom.xml
activemq-syscall/activemq-syscall-lib/: pom.xml
activemq-syscall/src/main/native-package/: configure.ac
activemq-syscall/src/main/native-package/src/: activemq-syscall.h
activemq-tcp/: pom.xml
activemq-transport/: pom.xml
activemq-util/: pom.xml
activemq-web/: pom.xml  readme.md
activemq-web/src/main/webapp/: index.scaml
apache-activemq-apollo/: pom.xml
apache-activemq-apollo/src/main/descriptors/: unix-src.xml  windows-bin.xml
apache-activemq-apollo/src/main/filtered-resources/: features.xml
apollo-amqp/: pom.xml  readme.md
apollo-amqp/src/test/ide-resources/: log4j.properties
apollo-amqp/src/test/resources/: apollo-amqp-leveldb.xml  apollo-amqp-secure.xml  apollo-amqp-ssl-secure.xml  apollo-amqp-ssl.xml  apollo-amqp.xml  jul.properties  log4j.properties  login.config  provider.properties  test.properties
apollo-bdb/: pom.xml
apollo-bdb/src/main/proto/: data.proto
apollo-boot/: pom.xml
apollo-broker/: pom.xml
apollo-broker/src/main/proto/: data.proto
apollo-broker/src/main/resources/: non-persistent-activemq.xml  persistent-activemq.xml
apollo-broker/src/test/resources/: log4j.properties
apollo-broker/src/test/scala/: BrokerFunSuiteSupport.scala
apollo-cassandra/: pom.xml
apollo-cassandra/src/main/proto/: data.proto
apollo-cli/: pom.xml
apollo-distro/: pom.xml
apollo-dto/: pom.xml
apollo-hawtdb/: pom.xml
apollo-itests/: pom.xml
apollo-jdbm2/: pom.xml
apollo-jmx/: pom.xml
apollo-karaf/: pom.xml
apollo-karaf-feature/: pom.xml
apollo-leveldb/: pom.xml
apollo-mqtt/: pom.xml  readme.md
apollo-network/: pom.xml
apollo-openwire/: pom.xml
apollo-openwire-generator/: pom.xml
apollo-scala/: pom.xml
apollo-selector/: pom.xml
apollo-stomp/: pom.xml
apollo-store/: pom.xml
apollo-tcp/: pom.xml
apollo-transport/: pom.xml
apollo-util/: pom.xml
apollo-war/: pom.xml
apollo-web/: Makefile  pom.xml
apollo-web/src/main/less/: app.less
apollo-website/: README  Rakefile  pom.xml  readme.md
apollo-website/diagrams/: diagrams.graffle  hawtdb.graffle  hawtdb.sdx
apollo-website/ext/: Website.scala
apollo-website/ext/scalate/: Boot.scala
apollo-website/src/: _navigation.ssp.md  architecture.page  download.page  index.page  metainfo  mirgration-guide.page  module-organization.page  network-design.page  performance-scaling.md  performance-scaling.page  privacy-policy.page  todo.page
apollo-website/src/community/: building.page  contributing.page  developers.page  faq.page  index.page  source.page
apollo-website/src/documentation/: amqp-manual.md  architecture.md  extending-guide.md  getting-started.md  index.page  management-api.md  migration-guide.md  module-organization.page  mqtt-manual.md  openwire-features.md  openwire-manual.md  performance-scaling.md  stomp-manual.md  user-manual.md  verification.md
apollo-website/src/versions/: index.page
assembly/: pom.xml
hawtdb/: pom.xml
kahadb/: pom.xml
sandbox/activemq-all/: pom.xml
sandbox/activemq-amqp/: pom.xml
sandbox/activemq-amqp-generator/: pom.xml
sandbox/activemq-client/: pom.xml
sandbox/activemq-dispatcher/: pom.xml
sandbox/activemq-flow/: pom.xml
sandbox/activemq-jmx/: pom.xml
sandbox/activemq-network/: pom.xml
sandbox/activemq-openwire/: pom.xml
sandbox/activemq-queue/: pom.xml
sandbox/activemq-spring/: pom.xml
sandbox/activemq-stomp/: pom.xml
sandbox/activemq-syscall/: pom.xml
sandbox/activemq-syscall/src/main/native-package/: configure.ac
sandbox/activemq-syscall/src/main/native-package/src/: activemq-syscall.h
sandbox/apache-activemq-apollo/: pom.xml
sandbox/distribution/: pom.xml
sandbox/hawtdb/: README  pom.xml
sandbox/kahadb/: README  pom.xml
src/main/proto/: journal-data.proto  kahadb-data.proto  test.proto
src/site/: site.xml
trunk/: .gitignore  pom.xml  readme.md
trunk/apollo-bdb/: pom.xml
trunk/apollo-cassandra/: pom.xml
trunk/apollo-distro/: pom.xml
trunk/apollo-hawtdb/: pom.xml
trunk/apollo-karaf-feature/.redcar/: tags
trunk/apollo-transport/: pom.xml
trunk/apollo-web/: pom.xml
trunk/apollo-website/: pom.xml
trunk/apollo-website/src/: download.page
webgen/: README  Rakefile  config.yaml
webgen/src/: architecture.page  index.page  metainfo  module-organization.page  network-design.page  privacy-policy.page  todo.page
(+5246 files in other folders)
